--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "ArabellaTech/suredone-php-sdk",
     "require-dev": {
         "satooshi/php-coveralls": "dev-master",
         "phpunit/phpunit": "3.7.*",
